Revert "fix(input): fixes alignment issues between textareas and inputs"
This reverts commit fb6f81a5a0f400b65ca3ecc72a64d669f1c4bfe8.

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -24,7 +24,6 @@ md-input-container {
   position: relative;
   padding: $input-container-padding;
   margin: 18px 0;
-  overflow: hidden;
 
   &.md-block {
     display: block;
@@ -156,11 +155,6 @@ md-input-container {
     // Fix number inputs in Firefox to be full-width
     width: 100%;
     box-sizing: border-box;
-
-    // Hacky fix to force vertical alignment between `input` and `textarea`
-    // Input and textarea do not align by default:
-    // http://jsbin.com/buqomevage/1/edit?html,css,js,output
-    float: left;
 
     &:focus {
       outline: none;
